[package]
name = "rustychip"
version = "0.1.0"
authors = ["Jonathan Birk <jona@jbirk.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19.0"
pixels = "0.2.0"
rand = "0.8.3"
time = "0.2.26"
ux = "0.1.3"
winit = "0.24.0"
