[package]
name = "rustychip"
version = "0.1.0"
authors = ["Jonathan Birk <jona@jbirk.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19.0"
log = "0.4.14"
pixels = "0.2.0"
rand = "0.8.3"
time = "0.2.26"
winit = "0.24.0"
winit_input_helper = "0.9.0"
